FIX: Scroll arrow is visible from hero again

--- a/app/assets/stylesheets/components/_fonts.scss
+++ b/app/assets/stylesheets/components/_fonts.scss
@@ -37,5 +37,5 @@ p {
   font-family: Montserrat, sans-serif;
   font-size: 12px;
   font-weight: 600;
-  color: rgb(248, 248, 248);
+  color: #1C1A20;
 }
